refactoring and fixing some issues